# Arkan

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
app/: app.js  index.html  styles.css
app/src/: app.ts  champion-model.test.ts  champion-model.ts  main.tsx
app/src/application/: dataDragonApi.ts  polling.test.ts  polling.ts  tauriApi.ts  useAppActions.ts
app/src/domain/: assets.ts  champion.ts  league.ts  match.ts  riotId.test.ts  riotId.ts
app/src/store/: appStore.test.ts  appStore.tsx
app/src/styles/: main.scss
app/src/ui/: App.tsx
app/src/ui/champions/: ChampionCatalogView.tsx  ChampionDetailPage.tsx
app/src/ui/components/: Button.tsx  EmptyLines.tsx  StatusPill.tsx  SurfaceCard.tsx
app/src/ui/layout/: Shell.tsx  Sidebar.tsx  Topbar.tsx
app/src/ui/matches/: MatchDetailPage.tsx
app/src/ui/profile/: ProfileView.tsx
crates/arkan-core/: Cargo.toml
crates/arkan-core/src/: config.rs  db.rs  lcu.rs  lib.rs  riot_api.rs  riot_id.rs  routing.rs
crates/arkan-core/tests/: domain_contracts.rs
docs/: arkan-database.excalidraw  champion-stats-source.md  dev-setup.md  notion-pending-updates.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
